@@ -12,6 +12,9 @@ Here is a history of user visible changes to Mailman.
     - Fixed an issue where sometimes the wrapper message for DMARC mitigation
       Wrap Message has no Subject:.  (LP: #1915655)
 
+    - Plain text message bodies with Content-Disposition: and no declared
+      charset are no longer scrubbed.  (LP: #1917968)
+
 2.1.34 (26-Jun-2020)
 
   i18n
